[package]
name = "nb-executor"
version = "0.1.0"
authors = ["Alejandro Soto <alejandro@34project.org>"]
edition = "2021"
description = "Single-future, #![no_std] executor based on event bitmasks"
license = "MIT"
readme = "README.md"
repository = "https://github.com/3442/nb-executor"
keywords = []
categories = []

[dependencies]
futures = { version = "0.3.19", default-features = false }
nb = "1.0.0"

[dev-dependencies]
bitflags = "1.3.2"
futures = "0.3.19"
